# tree-sitter-chordpro

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_chordpro/: __init__.py
bindings/rust/: lib.rs
examples/: example.chordpro
src/: grammar.json  node-types.json  parser.c
